GNOME Bugzilla – Bug 767803
Crash in try_pixmap_and_mask
Last modified: 2016-06-21 13:39:30 UTC
Created attachment 329975 [details] [review] xutils: add error trap in try_pixmap_and_mask https://bugs.freedesktop.org/show_bug.cgi?id=91967 This cairo bug has reproducer that can trigger X error in libwnck.
Created attachment 329976 [details] [review] xutils: add error trap in try_pixmap_and_mask Updated patch. _wnck_cairo_surface_get_from_pixmap is already protected with error trap so no need to include that part...
Just tested on fedora 24 with - cairo-1.14.6 + your patch from cairo report - libwnck-3.18.0 + the second patch - running test3.py reproducer Mate wnck applets or mate-panel don't crash any more. But the whole desktop can easily freeze if i try to open another window if test3.py is running. This didn't happen without 'add error trap in try_pixmap_and_mask'.
Review of attachment 329976 [details] [review]: Looks good, thanks
Review of attachment 329976 [details] [review]: +1