xutils: add error trap in try_pixmap_and_mask

https://bugs.freedesktop.org/show_bug.cgi?id=91967
This cairo bug has reproducer that can trigger X error in libwnck.

Add error trap in try_pixmap_and_mask to make sure that we don't
crash with X error when pixmap that is used for drawing is destroyed.

https://bugzilla.gnome.org/show_bug.cgi?id=767803